--- a/Vue_Learning/cssL.html
+++ b/Vue_Learning/cssL.html
@@ -47,4 +47,8 @@
         <div class="right"></div>
       </article>
   </body>
+  <script>
+    let a=1.11
+    console.log(~a)
+  </script>
 </html>
